chore: 添加 Git 规范配置和更新 .gitignore
- 添加 Husky、Commitlint、Commitizen、Standard Version
- 配置 Commit 消息规范检查
- 更新 .gitignore，参考 isailing 项目
- 添加 Git hooks（commit-msg, pre-commit）

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build:rolldown:watch": "rolldown -c rolldown.config.ts --watch",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
-    "typecheck": "vue-tsc --noEmit"
+    "typecheck": "vue-tsc --noEmit",
+    "prepare": "husky",
+    "commit": "cz",
+    "release": "standard-version"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
@@ -26,6 +29,8 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
     "@rushstack/eslint-patch": "^1.15.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^25.0.2",
@@ -35,9 +40,13 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.6.2",
+    "husky": "^9.1.7",
     "rolldown": "1.0.0-beta.57",
+    "standard-version": "^9.5.0",
     "typescript": "^5.9.3",
     "unocss": "^66.5.12",
     "unplugin-auto-import": "^20.3.0",
@@ -45,5 +54,10 @@
     "vite": "^7.2.7",
     "vite-plugin-pwa": "^1.2.0",
     "vue-tsc": "^3.1.8"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
