--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,141 @@
-# Dependencies
-node_modules/
-.pnp
-.pnp.js
+# Generated files
+*.timestamp-*.mjs
+auto-imports.d.ts
+components.d.ts
 
-# Testing
-coverage/
+# Mac OS
+.DS_Store
 
-# Production
-dist/
+# Build
+target/
 build/
+dist/
+dev-dist/
+
+# Temp
+temp/
+local/
+
+# Node Modules
+node_modules/
+
+# Project files
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.sts4-cache
+
+# IntelliJ IDEA
+.idea
+*.iws
+*.iml
+*.ipr
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+npm-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.eslintcache
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+
+# Help file
+HELP.md
+
+# VS Code
+.vscode/
+
+# Logs
+logs/
+
+# Configuration files
+application-local.yml
+application-local.yaml
+application-dev.yml
+application-dev.yaml
+application-prod.yml
+application-prod.yaml
+
+# Environment files
+.env*
+!.env.example
+
+# Turbo
+.turbo
+.next/
+
+# Other files
+.dccache
+
+# TypeScript
+tsconfig.tsbuildinfo
 
 # Misc
-.DS_Store
-*.log
 *.local
-
-# Editor
-.vscode/
-.idea/
 *.swp
 *.swo
 *~
 
-# Environment
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 # Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage
+coverage/
+*.lcov
+.nyc_output
+
+# Cache
+.cache/
+.parcel-cache/
+.eslintcache
+.stylelintcache
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn
+.yarn-integrity
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+# Vite logs files
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
 
 # OS
 Thumbs.db
