--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nacosdesk",
   "version": "1.0.0",
-  "description": "Nacos Console Desktop Application",
+  "description": "Nacos Desktop - An easy-to-use dynamic service discovery, configuration and service management platform for building cloud native applications",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,12 +13,21 @@
     "typecheck": "vue-tsc --noEmit",
     "prepare": "husky",
     "commit": "cz",
-    "release": "standard-version"
+    "release": "standard-version",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "@iarna/toml": "^2.2.5",
     "@monaco-editor/loader": "^1.7.0",
+    "@tauri-apps/api": "^2.9.1",
+    "@tauri-apps/plugin-store": "^2.4.1",
+    "@tauri-apps/plugin-updater": "^2.9.0",
     "element-plus": "^2.12.0",
     "js-yaml": "^4.1.1",
     "mitt": "^3.0.1",
@@ -32,6 +41,7 @@
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
     "@rushstack/eslint-patch": "^1.15.0",
+    "@tauri-apps/cli": "^2.9.6",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^25.0.2",
     "@unocss/vite": "^66.5.12",
@@ -39,11 +49,14 @@
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
+    "@vitest/ui": "^2.1.8",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.6.2",
+    "happy-dom": "^15.11.7",
     "husky": "^9.1.7",
     "rolldown": "1.0.0-beta.57",
     "standard-version": "^9.5.0",
@@ -53,6 +66,7 @@
     "unplugin-vue-components": "^30.0.0",
     "vite": "^7.2.7",
     "vite-plugin-pwa": "^1.2.0",
+    "vitest": "^2.1.8",
     "vue-tsc": "^3.1.8"
   },
   "config": {
