--- a/package.json
+++ b/package.json
@@ -47,17 +47,18 @@
     "@unocss/vite": "^66.5.12",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
+    "@vitest/ui": "^2.1.8",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
-    "@vitest/ui": "^2.1.8",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.6.2",
     "happy-dom": "^15.11.7",
     "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "rolldown": "1.0.0-beta.57",
     "standard-version": "^9.5.0",
     "typescript": "^5.9.3",
@@ -73,5 +74,13 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,vue}": [
+      "eslint --fix"
+    ],
+    "*.{ts,tsx}": [
+      "vue-tsc --noEmit"
+    ]
   }
 }
